works on actual robot

--- a/goal_publisher/CMakeLists.txt
+++ b/goal_publisher/CMakeLists.txt
@@ -8,6 +8,10 @@ find_package(catkin REQUIRED COMPONENTS
   jaco_kinematics_kdl
 )
 
+catkin_package(
+  CATKIN_DEPENDS 
+)
+
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
